<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{e7b626ee-7616-438d-ba06-1ccb984b8d91}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	
	i: INT;
	temperatura: REAL;
	sDB_Operador: STRING;
	j: INT;
	login: string;
	start: BOOL;
	boot: bool;
	
	concatena: BOOL;
	barTimeSec: DWORD;
	barTimeArm: DWORD;
	bardintSec19: DINT;
	bardintArm19: DINT;
	bTravaRegressivaS19: BOOL;
	bTravaRegressivaA19: BOOL;
	l: INT;
	readAnalog: REAL;
	number: int;
	bTravaRegressivaS20: BOOL;
	bTravaRegressivaA20: bool;
	bardintSec20: UDINT;
	bardintArm20: UDINT;
	bTravaRegressivaS21: BOOL;
	bTravaRegressivaA21: BOOL;
	bardintSec21: UDINT;
	bardintArm21: UDINT;
	barTimeSec19: DWORD;
	barTimeArm19: DWORD;
	barTimeSec20: DWORD;
	barTimeArm20: DWORD;
	barTimeSec21: DWORD;
	barTimeArm21: DWORD;
	k: INT;
	nabas1: INT;
	nabas2: INT;
	nabas3: INT;
	tweet1: INT;
	tweet2: INT;
	tweet3: INT;
	manual: STRING;
	try: BOOL;
	
	CloseApp: BOOL;
    closeApplication : NT_StartProcess;
	
	fbDBRecordInsertLog : FB_DBRecordInsert_EX;
	fbDBRecordInsertProc : FB_DBRecordInsert_EX;
	fbDBRecordArraySelect19 : FB_DBRecordArraySelect;
	fbDBRecordArraySelect20 : FB_DBRecordArraySelect;
	fbDBRecordArraySelect21 : FB_DBRecordArraySelect;
	
	bBusyInsertLog: BOOL;
	bBusyInsertProc: BOOL;
	nErrIDInsertLog: UDINT;
	nErrIDInsertProc: UDINT;
	bErrorInsertLog: BOOL;
	bErrorInsertProc: BOOL;
	bSelect: BOOL;
	bBusySelect: BOOL;
	bErrorSelect: BOOL;
	nErrIDSelect: UDINT;
	nRecords: UDINT;
	
	
	envialog: STRING(INT#36);
	user: INT;
	bBusySelect19: BOOL;
	logout: DWORD;
	bBusySelect20: BOOL;
	bBusySelect21: BOOL;
	ultimoLogin: STRING;
	selo19emrg: BOOL;
	tOperador: ton;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
Chart_Gen();
registradorLog();
registerProc();
registerProc20();
registerProc21();
Rotina019();
Rotina019_Manual();
Rotina020();
Rotina020_Manual();
Rotina021();
Rotina021_Manual();
POU_Persistent();
historical();
P_TextModeWrite();(* This sample program opens and writes CSV file in text mode *)
	

gvl.somaTempo:= SYSTEMTIME_TO_DT(gvl.fbGetLocalSystemTime.systemTime);
	
sDB_Operador:= WSTRING_TO_STRING(VisuElems.CurrentFullUserName);

// CALCULO DAS TEMPERATURAS 019 ---------------------------------------------------------------------------------------
gvl.zona1atual_019:= (INT_TO_REAL(gvl.AnalogIn_4_20[0]*200)/32767);
gvl.zona2atual_019:= (INT_TO_REAL(gvl.AnalogIn_4_20[1]*200)/32767);
gvl.zonaSegAtual_019:= (INT_TO_REAL(gvl.AnalogIn_4_20[2]*200)/32767);

gvl.AnalogOut_0_10[0]:= (gvl_p.zona1setpt_019)*164;
gvl.AnalogOut_0_10[1]:= (gvl_p.zona2setpt_019)*164;
gvl.AnalogOut_0_10[2]:= (gvl_p.zonaSegSetpt_019)*164;

// CALCULO DAS TEMPERATURAS 020 ---------------------------------------------------------------------------------------
gvl.zona1atual_020:= (INT_TO_REAL(gvl.AnalogIn_4_20[3]*200)/32767);
gvl.zona2atual_020:= (INT_TO_REAL(gvl.AnalogIn_4_20[4]*200)/32767);
gvl.zonaSegAtual_020:= (INT_TO_REAL(gvl.AnalogIn_4_20[5]*200)/32767);

gvl.AnalogOut_0_10[3]:= (gvl_p.zona1setpt_020)*164;
gvl.AnalogOut_0_10[4]:= (gvl_p.zona2setpt_020)*164;
gvl.AnalogOut_0_10[5]:= (gvl_p.zonaSegSetpt_020)*164;

// CALCULO DAS TEMPERATURAS 021 ---------------------------------------------------------------------------------------
gvl.zona1atual_021:= (INT_TO_REAL(gvl.AnalogIn_4_20[8]*200)/32767);
gvl.zona2atual_021:= (INT_TO_REAL(gvl.AnalogIn_4_20[6]*200)/32767);
gvl.zonaSegAtual_021:= (INT_TO_REAL(gvl.AnalogIn_4_20[7]*200)/32767);

gvl.AnalogOut_0_10[8]:= (gvl_p.zona1setpt_021)*164;
gvl.AnalogOut_0_10[6]:= (gvl_p.zona2setpt_021)*164;
gvl.AnalogOut_0_10[7]:= (gvl_p.zonaSegSetpt_021)*164;

// ROTINA PARA CALCULO DE QUANTIDADE DE POSIÇÕES E UTILIZADA -----------------------------------------------------------

gvl.totalPos[0]:=0;
gvl.totalPos[1]:=0;
gvl.totalPos[2]:=0;
FOR j:=1 TO 24 BY 1 DO
	IF gvl_p.aPositionsE019[j].cor = 0 THEN
		gvl.totalPos[0]:= gvl.totalPos[0];
	ELSE
		gvl.totalPos[0]:= gvl.totalPos[0]+1;
	END_IF
	
	IF gvl_p.aPositionsE020[j].cor = 0 THEN
		gvl.totalPos[1]:= gvl.totalPos[1];
	ELSE
		gvl.totalPos[1]:= gvl.totalPos[1]+1;			
	END_IF
	
	IF gvl_p.aPositionsE021[j].cor = 0 THEN
		gvl.totalPos[2]:= gvl.totalPos[2];
	ELSE
		gvl.totalPos[2]:= gvl.totalPos[2]+1;			
	END_IF
END_FOR


// VERIFICADO DE PRESENÇA DE REATOR -----------------------------------------------------------------------------------

FOR j:=1 TO 24 BY 1 DO
	IF gvl_p.aPositionsE019[j].reator THEN
		nabas1:=nabas1;
	ELSE
		nabas1:=nabas1+1;			
	END_IF	
	
	IF nabas1 > 0 THEN
	gvl_p.bCarrinhoReator1:=FALSE;
	ELSE
		gvl_p.bCarrinhoReator1:=TRUE;
	END_IF
	
	IF gvl_p.aPositionsE020[j].reator THEN
		nabas2:=nabas2;
	ELSE
		nabas2:=nabas2+1;			
	END_IF	
	
	IF nabas2 > 0 THEN
	gvl_p.bCarrinhoReator2:=FALSE;
	ELSE
		gvl_p.bCarrinhoReator2:=TRUE;
	END_IF
	
	IF gvl_p.aPositionsE021[j].reator THEN
		nabas3:=nabas3;
	ELSE
		nabas3:=nabas3+1;			
	END_IF	
	
	IF nabas3 > 0 THEN
	gvl_p.bCarrinhoReator3:=FALSE;
	ELSE
		gvl_p.bCarrinhoReator3:=TRUE;
	END_IF
END_FOR

nabas1:=0;
nabas2:=0;
nabas3:=0;

// CALCULADOR DO TEMPO TOTAL MANUAL ----------------------------------------------------------------------------

gvl.totalManual[0]:=gvl_p.arr_CustomTime[1,1]+gvl_p.arr_CustomTime[1,2]+
					gvl_p.arr_CustomTime[1,3]+gvl_p.arr_CustomTime[1,4]+
					gvl_p.arr_CustomTime[1,5]+gvl_p.arr_CustomTime[1,6]+
					gvl_p.arr_CustomTime[1,7]+gvl_p.arr_CustomTime[1,8]+
					gvl_p.arr_CustomTime[1,9]+gvl_p.arr_CustomTime[1,10];

gvl.totalManual[1]:=gvl_p.arr_CustomTime_020[1,1]+gvl_p.arr_CustomTime_020[1,2]+
					gvl_p.arr_CustomTime_020[1,3]+gvl_p.arr_CustomTime_020[1,4]+
					gvl_p.arr_CustomTime_020[1,5]+gvl_p.arr_CustomTime_020[1,6]+
					gvl_p.arr_CustomTime_020[1,7]+gvl_p.arr_CustomTime_020[1,8]+
					gvl_p.arr_CustomTime_020[1,9]+gvl_p.arr_CustomTime_020[1,10];
					
gvl.totalManual[2]:=gvl_p.arr_CustomTime_021[1,1]+gvl_p.arr_CustomTime_021[1,2]+
					gvl_p.arr_CustomTime_021[1,3]+gvl_p.arr_CustomTime_021[1,4]+
					gvl_p.arr_CustomTime_021[1,5]+gvl_p.arr_CustomTime_021[1,6]+
					gvl_p.arr_CustomTime_021[1,7]+gvl_p.arr_CustomTime_021[1,8]+
					gvl_p.arr_CustomTime_021[1,9]+gvl_p.arr_CustomTime_021[1,10];
					
// CONTAGEM REGRESSIVA DOS TEMPOS DAS ESTUFAS --------------------------------------------------------------------------

IF gvl_p.arrStatusEstufas[0].fimSecagem <> DT#1970-1-1-0:0:0 THEN
	IF NOT bTravaRegressivaS19 THEN
		gvl.endSeca19:= gvl_p.arrStatusEstufas[0].fimSecagem - systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime);
	END_IF
	IF NOT bTravaRegressivaA19 THEN
		gvl.endArm19:= gvl_p.arrStatusEstufas[0].fimArmazenagem - systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime);
	END_IF
barTimeSec19:= TIME_TO_DWORD(gvl.endSeca19);
barTimeArm19:= TIME_TO_DWORD(gvl.endArm19);
bardintSec19:= barTimeSec19/5688;//96h limite da barra
bardintArm19:= barTimeArm19/2275;//240h limite da barra
ELSE
	main.bardintArm19:= 0;
	main.bardintSec19:= 0;
	main.barTimeArm19:= 0;
	main.barTimeSec19:= 0;
END_IF

IF gvl_p.arrStatusEstufas[1].fimSecagem <> DT#1970-1-1-0:0:0 THEN
	IF NOT bTravaRegressivaS20 THEN
		gvl.endSeca20:= gvl_p.arrStatusEstufas[1].fimSecagem - systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime);
	END_IF
	IF NOT bTravaRegressivaA20 THEN
		gvl.endArm20:= gvl_p.arrStatusEstufas[1].fimArmazenagem - systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime);
	END_IF
barTimeSec20:= TIME_TO_DWORD(gvl.endSeca20);
barTimeArm20:= TIME_TO_DWORD(gvl.endArm20);
bardintSec20:= barTimeSec20/5688;
bardintArm20:= barTimeArm20/2275;
ELSE
	main.bardintArm20:= 0;
	main.bardintSec20:= 0;
	main.barTimeArm20:= 0;
	main.barTimeSec20:= 0;
END_IF

IF gvl_p.arrStatusEstufas[2].fimSecagem <> DT#1970-1-1-0:0:0 THEN
	IF NOT bTravaRegressivaS21 THEN
		gvl.endSeca21:= gvl_p.arrStatusEstufas[2].fimSecagem - systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime);
	END_IF
	IF NOT bTravaRegressivaA21 THEN
		gvl.endArm21:= gvl_p.arrStatusEstufas[2].fimArmazenagem - systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime);
	END_IF
barTimeSec21:= TIME_TO_DWORD(gvl.endSeca21);
barTimeArm21:= TIME_TO_DWORD(gvl.endArm21);
bardintSec21:= barTimeSec21/5688;
bardintArm21:= barTimeArm21/2275;
ELSE
	main.bardintArm21:= 0;
	main.bardintSec21:= 0;
	main.barTimeArm21:= 0;
	main.barTimeSec21:= 0;
END_IF

IF gvl_p.arrStatusEstufas[0].fimSecagem = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	bTravaRegressivaS19:= TRUE;
	ELSE
		bTravaRegressivaS19:= FALSE;
END_IF

IF gvl_p.arrStatusEstufas[0].fimArmazenagem = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	bTravaRegressivaA19:= TRUE;
	gvl_p.arrStatusEstufas[0].fimSecagem := DT#1970-1-1-0:0:0;
	ELSE
		bTravaRegressivaA19:= FALSE;
END_IF

IF gvl_p.arrStatusEstufas[1].fimSecagem = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	bTravaRegressivaS20:= TRUE;
	ELSE
		bTravaRegressivaS20:= FALSE;
END_IF

IF gvl_p.arrStatusEstufas[1].fimArmazenagem = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	bTravaRegressivaA20:= TRUE;
	gvl_p.arrStatusEstufas[1].fimSecagem := DT#1970-1-1-0:0:0;
	ELSE
		bTravaRegressivaA20:= FALSE;
END_IF

IF gvl_p.arrStatusEstufas[2].fimSecagem = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	bTravaRegressivaS21:= TRUE;
	ELSE
		bTravaRegressivaS21:= FALSE;
END_IF

IF gvl_p.arrStatusEstufas[2].fimArmazenagem = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	bTravaRegressivaA21:= TRUE;
	gvl_p.arrStatusEstufas[2].fimSecagem := DT#1970-1-1-0:0:0;
	ELSE
		bTravaRegressivaA21:= FALSE;
END_IF

// ROTINA DE VERIFICAÇÃO DE COR --------------------------------------------------------------------------------------

FOR i:=1 TO 24 BY 1 DO
IF GVL_p.aPositionsE019[i].cor = 0 THEN
	gvl_p.aPositionsE019[i].color:= 16#FFFFFFFF;
	ELSIF gvl_p.aPositionsE019[i].cor = 1 THEN
		gvl_p.aPositionsE019[i].color:= 16#FF00C000;
		ELSIF gvl_p.aPositionsE019[i].cor = 2 THEN
		gvl_p.aPositionsE019[i].color:= 16#FFFFFF00;
END_IF

IF GVL_p.aPositionsE020[i].cor = 0 THEN
	gvl_p.aPositionsE020[i].color:= 16#FFFFFFFF;
	ELSIF gvl_p.aPositionsE020[i].cor = 1 THEN
		gvl_p.aPositionsE020[i].color:= 16#FF00C000;
		ELSIF gvl_p.aPositionsE020[i].cor = 2 THEN
		gvl_p.aPositionsE020[i].color:= 16#FFFFFF00;
END_IF

IF GVL_p.aPositionsE021[i].cor = 0 THEN
	gvl_p.aPositionsE021[i].color:= 16#FFFFFFFF;
	ELSIF gvl_p.aPositionsE021[i].cor = 1 THEN
		gvl_p.aPositionsE021[i].color:= 16#FF00C000;
		ELSIF gvl_p.aPositionsE021[i].cor = 2 THEN
		gvl_p.aPositionsE021[i].color:= 16#FFFFFF00;
END_IF
END_FOR

FOR l:=1 TO 6 BY 1 DO
	IF GVL_p.corPosReator1[l].cor = 0 THEN
	GVL_p.corPosReator1[l].color:= 16#FFFFFFFF;
	ELSIF GVL_p.corPosReator1[l].cor = 1 THEN
		GVL_p.corPosReator1[l].color:= 16#FF00C000;
	END_IF
		
	IF GVL_p.corPosReator2[l].cor = 0 THEN
	GVL_p.corPosReator2[l].color:= 16#FFFFFFFF;
	ELSIF GVL_p.corPosReator2[l].cor = 1 THEN
		GVL_p.corPosReator2[l].color:= 16#FF00C000;
	END_IF
	
	IF GVL_p.corPosReator3[l].cor = 0 THEN
	GVL_p.corPosReator3[l].color:= 16#FFFFFFFF;
	ELSIF GVL_p.corPosReator3[l].cor = 1 THEN
		GVL_p.corPosReator3[l].color:= 16#FF00C000;
	END_IF
END_FOR

// ROTINA SYSTEM DATE TIME ---------------------------------------------------------------------------------------------

gvl.fbGetLocalSystemTime(
sNetID:= ,
bEnable:= TRUE,
dwCycle:= 1,
dwOpt:= ,
tTimeout:= ,
bValid=> ,
systemTime=> ,
tzID=> );

gvl.sSystemDateTime := systemtime_to_string(gvl.fbGetLocalSystemTime.systemTime);
gvl.sSystemDate:= MID(STR:= gvl.sSystemDateTime , LEN:= 10, POS:=1 );
gvl.sSystemTime:= MID(STR:= gvl.sSystemDateTime , LEN:= 8, POS:=12 );

// ROTINA DE SEGURANÇA -----------------------------------------------------------------------------------------------------
IF gvl.zona1atual_019 > gvl_p.zonaSegSetpt_019 OR gvl.zona2atual_019 > gvl_p.zonaSegSetpt_019 OR NOT gvl.inEmergencia019 OR NOT boot THEN
	gvl.emergencia019:= TRUE;
	gvl.pwEmerg_019:= TRUE;
	gvl.emergency:= TRUE;
	selo19emrg:= FALSE;
	boot:= TRUE;
	envialog:= 'Emergência Ativada - Estufa 019';
	gvl.logRegister19:= envialog;
END_IF

IF gvl.zona1atual_020 > gvl_p.zonaSegSetpt_020 OR gvl.zona2atual_020 > gvl_p.zonaSegSetpt_020 OR NOT gvl.inEmergencia020 OR NOT boot THEN
	gvl.emergencia020:= TRUE;
	gvl.pwEmerg_020:= TRUE;
	gvl.emergency:= TRUE;
	boot:= TRUE;
	envialog:= 'Emergência Ativada - Estufa 020';
	gvl.logRegister19:= envialog;
END_IF

IF gvl.zona1atual_021 > gvl_p.zonaSegSetpt_021 OR gvl.zona2atual_021 > gvl_p.zonaSegSetpt_021 OR NOT gvl.inEmergencia021 or not boot THEN
	gvl.emergencia021:= TRUE;
	gvl.pwEmerg_021:= TRUE;
	gvl.emergency:= TRUE;
	boot:= TRUE;
	envialog:= 'Emergência Ativada - Estufa 021';
	gvl.logRegister19:= envialog;
END_IF

//Rotina envio sinal de produção ProdWin -------------------------------------------------------------------------
IF gvl_p.etapa_process[0] = 'Secagem' THEN
	gvl.pwProd_019:= TRUE;
	ELSE
		gvl.pwProd_019:= FALSE;
END_IF

IF gvl_p.etapa_process[1] = 'Secagem' THEN
	gvl.pwProd_020:= TRUE;
	ELSE
		gvl.pwProd_020:= FALSE;
END_IF

IF gvl_p.etapa_process[2] = 'Secagem' THEN
	gvl.pwProd_021:= TRUE;
	ELSE
		gvl.pwProd_021:= FALSE;
END_IF

// SQLite comunication ---------------------------------------------------------------------------------------------


IF bBusyInsertLog THEN
gvl.bInsertLog:= FALSE;
END_IF
	
fbDBRecordInsertLog(
	sNetID 		:= '',
	hDBID 		:= 1,
	pCmdAddr 	:= ADR(gvl.sCmdInsertLog),
	cbCmdSize 	:= SIZEOF(gvl.sCmdInsertLog),
	bExecute 	:= gvl.bInsertLog,
	tTimeout 	:= T#3S,
	bBusy 		=> bBusyInsertLog,
	bError 		=> bErrorInsertLog,
	nErrID 		=> nErrIDInsertLog);
	
IF bBusyInsertProc THEN
gvl.bInsertProc:= FALSE;
END_IF
	
fbDBRecordInsertProc(
	sNetID 		:= '',
	hDBID 		:= 1,
	pCmdAddr 	:= ADR(gvl.sCmdInsertProc),
	cbCmdSize 	:= SIZEOF(gvl.sCmdInsertProc),
	bExecute 	:= gvl.bInsertProc,
	tTimeout 	:= T#3S,
	bBusy 		=> bBusyInsertProc,
	bError 		=> bErrorInsertProc,
	nErrID 		=> nErrIDInsertProc);
	

IF bBusySelect19 THEN
gvl.bSelect19:= FALSE;
END_IF

fbDBRecordArraySelect19(
	sNetID 				:= '',
	hDBID 				:= 1,
	pCmdAddr 			:= ADR(gvl.sCmdSelect19),
	cbCmdSize 			:= SIZEOF(gvl.sCmdSelect19),
	nStartIndex 		:= 0,
	nRecordCount 		:= MAX_CSV_ROWS,
	pDestAddr 			:= ADR(gvl.aSelect19),
	cbRecordArraySize 	:= SIZEOF(gvl.aSelect19),
	bExecute 			:= gvl.bSelect19,
	tTimeout 			:= T#30S,
	bBusy 				=> bBusySelect19,
	bError 				=> bErrorSelect,
	nErrID 				=> nErrIDSelect,
	nRecords 			=> nRecords,);
	
// VERIFICADOR DE LOGIN DE USUÁRIO ------------------------------------------------------------------------------------------

CASE user OF
0:
IF sDB_Operador <> '' AND sDB_Operador <> ultimoLogin THEN
	user:=10;
	ultimoLogin:='';
	ultimoLogin:= sDB_Operador;
	tOperador(in:= TRUE, pt:=T#1S);
	envialog:= 'Usuário ';
	envialog:= concat(envialog, sdb_operador);
	envialog:= concat(envialog, ' Logado.');
	gvl.logRegister19:= envialog;
ELSE
	user:=0;
END_IF
10:
IF (sDB_Operador = '' OR sDB_Operador = 'None') THEN
	user:=0;
	tOperador(in:=FALSE);
	envialog:= 'Usuário deslogado.';
	gvl.logRegister19:= envialog;
ELSE
	user:=10;
END_IF
END_CASE

// LOGICA HISTORICO ------------------------------------------------------------------------------------------------
IF gvl.radioFiltro = 0 THEN
	gvl.radioData:= FALSE;
	ELSE
		gvl.radioData:= TRUE;
END_IF

IF gvl.radioFiltro = 1 THEN
	gvl.radioOF:= FALSE;
	ELSE
		gvl.radioOF:= TRUE;
END_IF

IF gvl.radioFiltro = 2 THEN
	gvl.radioLote:= FALSE;
	ELSE
		gvl.radioLote:= TRUE;
END_IF

// LINK DE VARIAVEIS COM IOs ESTUFA 019 ------------------------------------------------------------------------------------

	gvl.sobrecarga_M1_vent_019:= gvl.DigitalIn1[1];
	gvl.sobrecarga_M2_vent_019:= gvl.DigitalIn1[2];
	gvl.sobrecarga_Purga_019:= gvl.DigitalIn1[4];
	gvl.falhaTempHigh_019:= gvl.DigitalIn1[6];
	gvl.queimador1_block_019:= gvl.DigitalIn1[8];
	gvl.queimador2_block_019:= gvl.DigitalIn1[10];
	gvl.ventilacao_Ligada_019:= gvl.DigitalIn1[12];
	gvl.aquecimento_Desligado_019:= gvl.DigitalIn1[3];
	gvl.aquecimento_Ligado_019:= gvl.DigitalIn1[5];
	gvl.fimCicloAquecimento_019:= gvl.DigitalIn1[7];
	gvl.purgandoCamara_019:= gvl.DigitalIn1[9];
	gvl.inEmergencia019:= gvl.DigitalIn3[14];
	gvl.DigitalOut1[7]:= gvl.liga_ventilacao_019;
	gvl.DigitalOut1[8]:= gvl.liga_aquecimento_019;
	gvl.DigitalOut1[9]:= gvl.desl_aquecimento_019;
	gvl.DigitalOut2[9]:= gvl.emergencia019;
	

// LINK DE VARIAVEIS COM IOs ESTUFA 020 ------------------------------------------------------------------------------------

	gvl.sobrecarga_M1_vent_020:= gvl.DigitalIn1[13];
	gvl.sobrecarga_M2_vent_020:= gvl.DigitalIn1[14];
	gvl.sobrecarga_Purga_020:= gvl.DigitalIn1[15];
	gvl.falhaTempHigh_020:= gvl.DigitalIn2[2];
	gvl.queimador1_block_020:= gvl.DigitalIn2[4];
	gvl.queimador2_block_020:= gvl.DigitalIn2[6];
	gvl.ventilacao_Ligada_020:= gvl.DigitalIn2[8];
	gvl.aquecimento_Desligado_020:= gvl.DigitalIn1[15];
	gvl.aquecimento_Ligado_020:= gvl.DigitalIn2[1];
	gvl.fimCicloAquecimento_020:= gvl.DigitalIn2[3];
	gvl.purgandoCamara_020:= gvl.DigitalIn2[5];
	gvl.inEmergencia020:= gvl.DigitalIn3[15];
	gvl.DigitalOut1[12]:= gvl.liga_ventilacao_020;
	gvl.DigitalOut1[11]:= gvl.liga_aquecimento_020;
	gvl.DigitalOut1[10]:= gvl.desl_aquecimento_020;
	gvl.DigitalOut2[10]:= gvl.emergencia020;
	

// LINK DE VARIAVEIS COM IOs ESTUFA 021 ------------------------------------------------------------------------------------

	gvl.sobrecarga_M1_vent_021:= gvl.DigitalIn2[9];
	gvl.sobrecarga_M2_vent_021:= gvl.DigitalIn2[10];
	gvl.sobrecarga_Purga_021:= gvl.DigitalIn2[12];
	gvl.falhaTempHigh_021:= gvl.DigitalIn2[14];
	gvl.queimador1_block_021:= gvl.DigitalIn2[16];
	gvl.queimador2_block_021:= gvl.DigitalIn3[2];
	gvl.ventilacao_Ligada_021:= gvl.DigitalIn3[4];
	gvl.aquecimento_Desligado_021:= gvl.DigitalIn2[11];
	gvl.aquecimento_Ligado_021:= gvl.DigitalIn2[13];
	gvl.fimCicloAquecimento_021:= gvl.DigitalIn2[15];
	gvl.purgandoCamara_021:= gvl.DigitalIn3[1];
	gvl.inEmergencia021:= gvl.DigitalIn3[16];
	gvl.DigitalOut1[13]:= gvl.liga_ventilacao_021;
	gvl.DigitalOut1[14]:= gvl.liga_aquecimento_021;
	gvl.DigitalOut1[15]:= gvl.desl_aquecimento_021;
	gvl.DigitalOut2[11]:= gvl.emergencia021;
	

// LINK DE VARIAVEIS OI PRODWIN --------------------------------------------------------------------------

	gvl.DigitalOut1[1]:= gvl.pwProd_019;
	gvl.DigitalOut1[2]:= gvl.pwEmerg_019;
	gvl.DigitalOut1[3]:= gvl.pwProd_020;
	gvl.DigitalOut1[4]:= gvl.pwEmerg_020;
	gvl.DigitalOut1[5]:= gvl.pwProd_021;
	gvl.DigitalOut1[6]:= gvl.pwEmerg_021;


]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="3134" Count="0" />
      <LineId Id="2203" Count="11" />
      <LineId Id="2886" Count="0" />
      <LineId Id="2216" Count="34" />
      <LineId Id="2963" Count="0" />
      <LineId Id="2251" Count="0" />
      <LineId Id="2964" Count="1" />
      <LineId Id="2252" Count="248" />
      <LineId Id="2970" Count="0" />
      <LineId Id="3135" Count="0" />
      <LineId Id="3046" Count="1" />
      <LineId Id="2501" Count="5" />
      <LineId Id="3136" Count="0" />
      <LineId Id="3048" Count="1" />
      <LineId Id="2507" Count="5" />
      <LineId Id="3137" Count="0" />
      <LineId Id="3050" Count="1" />
      <LineId Id="2513" Count="0" />
      <LineId Id="2968" Count="0" />
      <LineId Id="2515" Count="71" />
      <LineId Id="2588" Count="1" />
      <LineId Id="2773" Count="0" />
      <LineId Id="2590" Count="3" />
      <LineId Id="2962" Count="0" />
      <LineId Id="2961" Count="0" />
      <LineId Id="3054" Count="0" />
      <LineId Id="2594" Count="9" />
      <LineId Id="3055" Count="0" />
      <LineId Id="2604" Count="7" />
      <LineId Id="2750" Count="1" />
      <LineId Id="2753" Count="1" />
      <LineId Id="2752" Count="0" />
      <LineId Id="2757" Count="4" />
      <LineId Id="2756" Count="0" />
      <LineId Id="2763" Count="4" />
      <LineId Id="2762" Count="0" />
      <LineId Id="2768" Count="0" />
      <LineId Id="2612" Count="69" />
      <LineId Id="178" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>